--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="155dp"
         android:background="#ffffff"
         android:gravity="center|top"
         android:orientation="horizontal">
@@ -64,6 +64,11 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
                 android:textSize="15dp" />
+
+            <TextView
+                android:id="@+id/currentRotation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
 
